--- a/04_mobile_robot_vehicles/contents/_flying.qmd
+++ b/04_mobile_robot_vehicles/contents/_flying.qmd
@@ -9,11 +9,11 @@
 * Flying robots have $6$-dof with configuration $\bm{q} \in \mathcal{C} = \bm{SE}(3)$.
 * We use a dynamic rather than a kinematic model.
 * The rotors are driven by electric motors, powered by electronic speed controllers.
-* The rotor speed is $\omega_i$ and the thrust is an upward vector 
-$$ T_i = b \omega_i^2, \; \; i = 1, 2, 3, 4, $$ in the vehicle's negative $z$-direction.
+* The rotor speed is $\varpi_i$ and the thrust is an upward vector 
+$$ T_i = b \varpi_i^2, \; \; i = 1, 2, 3, 4, $$ in the vehicle's negative $z$-direction.
 * The translational dynamics of the vehicle in world coordinates is given by 
 Newton's second law
-$$ m \dot{\bm{v}} = \begin{pmatrix} 0 \\ 0 \\ m g \end{pmatrix} - {^B}\bm{R}_B 
+$$ m \dot{\bm{v}} = \begin{pmatrix} 0 \\ 0 \\ m g \end{pmatrix} - {^0}\bm{R}_B 
 \begin{pmatrix} 0 \\ 0 \\ T \end{pmatrix} - B \bm{v},
 $$
 where $\bm{v}$ is the velocity of the CoM in the world frame, $g$ is the 
