--- a/06_localization/contents/_deadreckoning.qmd
+++ b/06_localization/contents/_deadreckoning.qmd
@@ -13,8 +13,8 @@ change in heading direction.
   - gyroscope bias
 * They are also imperfect due to random errors such as slip between wheels and
 the ground.
-* Robots w/o wheels, such as aerial robots, can use visual odometry based on
-observations of the world moving past the robot.
+* Robots w/o wheels, such as aerial and underwater robots, can use visual 
+odometry based on observations of the world moving past the robot.
 
 
 ## Modeling the vehicle {.smaller}
@@ -90,7 +90,7 @@ $$
 \bm{x}\langle k+1 \rangle = \bm{f}\left( \bm{x}\langle k \rangle, \delta \langle
 k \rangle, \bm{v}\langle k \rangle \right) = \begin{pmatrix}
 x\langle k \rangle + (\delta_d+v_d) \cos{\theta\langle k \rangle} \\
-y\langle k \rangle + (\delta_d+v_d) \cos{\theta\langle k \rangle} \\
+y\langle k \rangle + (\delta_d+v_d) \sin{\theta\langle k \rangle} \\
 \theta\langle k \rangle + \delta_\theta + v_\theta
 \end{pmatrix}
 $$
@@ -175,7 +175,7 @@ the right.
   within $\pm 2\sigma$ bound.
 * There are off-diagonal terms in the correlation matrix, which indicate that
 the uncertainties between the corresponding variables are related.
-  - For example, the value $P_{1,3}=P_{3,1} = -0.5575$ indicats the
+  - For example, the value $P_{1,3}=P_{3,1} = -0.5575$ indicates the
     uncertainties in $x$ and $\theta$ are related.
 * The total uncertainty is given by $\sqrt{\det{(\hat{\bm{P}})}}$ and is
 plotted.
