--- a/03_time_and_motion/contents/_derivative.qmd
+++ b/03_time_and_motion/contents/_derivative.qmd
@@ -136,7 +136,7 @@ skew-symmetric matrices $\hat{\bm{\omega}}$.
 * By analogy to the exponential coordinates $\hat{\bm{\omega}}\theta$ for 
 rotations, we define the $6$-dimensional exponential coordinates of a homogeneous
 transformation $\bm{T}$ as $\bm{\eta} = \bm{\mathcal{S}}\theta$
-  - $\bm{\mathcal{S}} = (\bm{v}, \bm{\omega})$ is called the _screw axis_
+  - $\bm{\mathcal{S}} = (\bm{v}, \bm{\omega})$ is called the _screw axis_.
   - $\theta$ is the _screw parameter_: it is the distance to be travelled along 
   the screw axis to take a frame from the origin to $\bm{T} = (\bm{R}, \bm{p})$.
 
@@ -214,18 +214,19 @@ $\exp{(\hat{\bm{\omega}}\theta)} = \bm{R}$ as in the axis-angle representation s
 
 This leaves the equation 
 $$
-(\bm{I} - e^{\bm{\hat{\omega}\theta}})(\bm{\omega} \times \bm{v}) + \bm{\omega}\bm{\omega}^\top \bm{v}\theta = 
+(\bm{I} - e^{\bm{\hat{\omega}}\theta})(\bm{\omega} \times \bm{v}) + \bm{\omega}\bm{\omega}^\top \bm{v}\theta = 
 \left( \bm{I}\theta + (1-\cos{\theta})\hat{\bm{\omega}} + 
 (\theta - \sin{\theta})\hat{\bm{\omega}}^2 \right)\bm{v} = \bm{p},
 $$
 which must be solved for $\bm{v}$. It suffices to show that the matrix 
 $$
-\bm{A} = (\bm{I} - e^{\bm{\hat{\omega}\theta}})\hat{\bm{\omega}} + \bm{\omega}\bm{\omega}^\top \theta
+\bm{A} = (\bm{I} - e^{\bm{\hat{\omega}}\theta})\hat{\bm{\omega}} + \bm{\omega}\bm{\omega}^\top \theta
 = \bm{I}\theta + (1-\cos{\theta})\hat{\bm{\omega}} +  (\theta - \sin{\theta})\hat{\bm{\omega}}^2
 $$
 is nonsingular for all $\theta \in (0, 2\pi)$. This follows from the fact that 
-the two matrices (first equality) which comprise $\bm{A}$ have mutually orthogonal nullspaces 
-when $\theta \neq 0$ (and $\bm{R} \neq \bm{I}$).
+the two matrices (first equality) which comprise $\bm{A}$ have mutually orthogonal 
+nullspaces ($\text{span}\{\bm{\omega}\}$ and $\text{span}\{\bm{\omega}\}^\perp$,
+resp.)  when $\theta \neq 0$ (and $\bm{R} \neq \bm{I}$).
 :::
 
 :::
@@ -246,12 +247,14 @@ To show that $\bm{I} + \hat{\bm{\omega}}^2 = \bm{\omega}\bm{\omega}^\top$, let
 us view each side of this equation as a linear transformation acting on $\mathbb{R}^3 = S \oplus N$,
 where $S = \text{span}\{\bm{\omega}\}$ and $N = \text{span}\{\bm{\omega}\}^\perp$.
 
-Let $\bm{s} \in S$, so that $\bm{s} = \alpha \bm{\omega}$ for some $\alpha \in \mathbb{R}$. We have 
-$\bm{\omega}\bm{\omega}^\top \bm{s} = \bm{s}$. On the other hand, $(\bm{I} + \hat{\bm{\omega}}^2)\bm{s} = \bm{s} + \bm{\hat{\omega}}(\bm{\omega} \times \bm{s}) = \bm{s}$.
+Let $\bm{s} \in S$. Then we have 
+$\bm{\omega}\bm{\omega}^\top \bm{s} = \bm{s}$. On the other hand, 
+$(\bm{I} + \hat{\bm{\omega}}^2)\bm{s} = \bm{s} + \bm{\hat{\omega}}(\bm{\omega} \times \bm{s}) = \bm{s} + \bm{0} = \bm{s}$.
 Hence $\bm{\omega}\bm{\omega}^\top = \bm{I} + \hat{\bm{\omega}}^2 = \bm{I}$ on $S$.
 
 Let $\bm{n} \in N$. Then we have 
-$\bm{\omega}\bm{\omega}^\top \bm{n} = \bm{0}$. On the other hand, $(\bm{I} + \hat{\bm{\omega}}^2)\bm{n} = \bm{n} + \bm{\hat{\omega}}(\bm{\omega} \times \bm{n}) = \bm{0}$.
+$\bm{\omega}\bm{\omega}^\top \bm{n} = \bm{0}$. On the other hand, 
+$(\bm{I} + \hat{\bm{\omega}}^2)\bm{n} = \bm{n} + \bm{\omega} \times (\bm{\omega} \times \bm{n}) = \bm{n} - \bm{n} = \bm{0}$.
 Hence $\bm{\omega}\bm{\omega}^\top = \bm{I} + \hat{\bm{\omega}}^2 = \bm{0}$ on $N$.
 
 Combining these results, we have $\bm{\omega}\bm{\omega}^\top = \bm{I} + \hat{\bm{\omega}}^2$ on $\mathbb{R}^3$.
